--- a/public/css/root.css
+++ b/public/css/root.css
@@ -33,7 +33,7 @@ a {
   flex-direction: column;
   gap: 40px;
   text-align: center;
-  margin: 400px 0;
+  margin: 240px 0;
 }
 
 .sumary__logo {
@@ -88,4 +88,61 @@ a {
 .link__docs:hover {
   color: #33333393;
   box-shadow: none;
+}
+
+.docs {
+  max-width: 1280px;
+}
+
+.docs__title {
+  font-size: 24px;
+  font-weight: 300;
+  margin-bottom: 30px;
+}
+
+.docs__example {
+  margin-bottom: 120px;
+  background-color: #3333330e;
+  padding: 30px;
+  letter-spacing: 2px;
+}
+
+.docs__text {
+  font-weight: 300;
+  font-size: 16px;
+  color: #33333393;
+  margin-bottom: 20px;
+}
+
+.list {
+  margin-bottom: 120px;
+}
+
+.list__item {
+  display: flex;
+  justify-content: space-between;
+  max-width: 460px;
+  margin: 10px 0;
+}
+
+.list__item > a {
+  color: #7f8ecff6;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  gap: 3px;
+  align-items: center;
+  padding: 60px 0;
+  background-color: #3333330e;
+  justify-content: center;
+}
+
+.footer__text {
+  color: #3333339f;
+}
+
+.footer__link {
+  color: #7f8ecff6;
 }
