--- a/views/index.html
+++ b/views/index.html
@@ -42,35 +42,39 @@ fetch('https://diystore-api.onrender.com/products/1')
       <ul class="list">
         <li class="list__item">
           <span>GET</span>
-          <a href="#">/products</a>
+          <a href="https://diystore-api.onrender.com/products">/products</a>
         </li>
         <li class="list__item">
           <span>GET</span>
-          <a href="#">/products/1</a>
+          <a href="https://diystore-api.onrender.com/products/1">/products/1</a>
         </li>
         <li class="list__item">
           <span>GET</span>
-          <a href="#">/products/categories</a>
+          <a href="https://diystore-api.onrender.com/products/categories"
+            >/products/categories</a
+          >
         </li>
         <li class="list__item">
           <span>GET</span>
-          <a href="#">/products/category/kids</a>
+          <a href="https://diystore-api.onrender.com/products/category/kids"
+            >/products/category/kids</a
+          >
         </li>
         <li class="list__item">
           <span>POST</span>
-          <a href="#">/products</a>
+          <p>/products</p>
         </li>
         <li class="list__item">
           <span>PUT</span>
-          <a href="#">/products/1</a>
+          <p>/products/1</p>
         </li>
         <li class="list__item">
           <span>PATCH</span>
-          <a href="#">/products/1</a>
+          <p>/products/1</p>
         </li>
         <li class="list__item">
           <span>DELETE</span>
-          <a href="#">/products/1</a>
+          <p>/products/1</p>
         </li>
       </ul>
     </section>
