refactor: missing link config set

--- a/views/index.html
+++ b/views/index.html
@@ -42,21 +42,29 @@ fetch('https://diystore-api.onrender.com/products/1')
       <ul class="list">
         <li class="list__item">
           <span>GET</span>
-          <a href="https://diystore-api.onrender.com/products">/products</a>
+          <a target="_blank" href="https://diystore-api.onrender.com/products"
+            >/products</a
+          >
         </li>
         <li class="list__item">
           <span>GET</span>
-          <a href="https://diystore-api.onrender.com/products/1">/products/1</a>
+          <a target="_blank" href="https://diystore-api.onrender.com/products/1"
+            >/products/1</a
+          >
         </li>
         <li class="list__item">
           <span>GET</span>
-          <a href="https://diystore-api.onrender.com/products/categories"
+          <a
+            target="_blank"
+            href="https://diystore-api.onrender.com/products/categories"
             >/products/categories</a
           >
         </li>
         <li class="list__item">
           <span>GET</span>
-          <a href="https://diystore-api.onrender.com/products/category/kids"
+          <a
+            target="_blank"
+            href="https://diystore-api.onrender.com/products/category/kids"
             >/products/category/kids</a
           >
         </li>
